# wtpsplit-lite

./: .copier-answers.yml  .cruft.json  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
src/wtpsplit_lite/: __init__.py  _config.py  _extract.py  _sat.py  _tokenizer.py  _utils.py
tests/: __init__.py  specrel.md  test_sat.py
